--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,13 @@
 html {
   font-size: 16px;
-  line-height: 2.5;    
+     
 }
 
+body {
+    font-family: 'roboto', sans-serif;
+    line-height: 1.5;
+    color: rgb(50, 51, 50);
+}
 h1 {
   font-size: 3.5rem;
   font-weight: bold;
@@ -10,7 +15,17 @@ h1 {
 
 h2  {
   font-size: 2rem;
-  font-weight: 300;
+  font-weight: 400;
+}
+
+h3 {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+h4 {
+    font-size: 1.3;
+    font-weight: 300;
 }
 
 a {
@@ -26,9 +41,9 @@ a {
 
 
 
-div {
+/*div {
   border: 2px solid green;
-}
+} */
 
 /* Nav stlyes */
 nav {
@@ -38,12 +53,17 @@ nav {
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  border: 1px solid green;
 }
 
 .company {
+  display: flex;
+  align-items: center;    
   padding-left: 1.5rem;
-  font-size: 1.5rem
+  font-size: 1.5rem;
+}
+
+.company span:last-child {
+    color: rgb(165, 165, 168);
 }
 
 nav ul {
@@ -51,15 +71,19 @@ nav ul {
   flex-direction: row;
   padding-right: 1.5rem;
   font-size: 1.2rem;
+  height: 100%;
+}
+
+nav ul li {
+    padding-top: 1.15rem;
 }
 
 nav ul li:nth-child(1n+2){
-  border-left: 1rem solid rgb(101, 255, 219);
+  border-left: 1rem solid rgb(125, 255, 251);
 }
 
-/* Page divide style */
+/* banner */
 .banner {
-  
   background-color: rgb(202, 204, 203);
 }
 
@@ -94,11 +118,11 @@ nav ul li:nth-child(1n+2){
     padding-right: 5rem;
 }
 
-.start {
+.btn {
     text-align: center;
     height: auto;
     padding: 0.5rem 0;
-    background-color: darkgrey;
+    background-color: grey;
     color: white;
     margin-top: 2rem;
     margin-right: 5rem;
@@ -121,13 +145,20 @@ h1.content-title {
 }
 
 .content .divide-right {
-  padding-left: 1rem;
+  
+  padding-top: 1rem;    
+  border-left: 1px solid rgb(205, 206, 209);
     
 }
 
 .article {
   display: flex;
+    
 
+}
+
+.article:last-child {
+    background-color: rgb(202, 204, 203);
 }
 
 .article-image {
@@ -138,7 +169,7 @@ h1.content-title {
 .article-image img {
   width: 100%;
   height: auto;
-  margin: 1rem 0 1rem 0;
+  margin: 1rem 0 1rem 1rem;
 }
 
 .article-text {
@@ -146,11 +177,93 @@ h1.content-title {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: auto 1rem auto 2rem;    
+}
+
+.article-text h2 {
+    font-size: 1.8rem;
 }
 
 .article-text p {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  font-weight: 300;    
 }
+
+/* Learning section style */
+
+.learning {
+    background-color: rgb(202, 204, 203);
+    flex-direction: column; 
+    align-items: center;
+}
+
+.top-title {
+    text-align: center;
+    padding: 2rem 0;
+}
+
+.course-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    justify-content: space-between;
+    margin; auto 0;
+}
+
+.course {
+    width: 30%;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 2rem;
+}
+
+.course img {
+    width: 100%;
+    height: auto;
+}
+
+.subject {
+    padding: 1rem 1.5rem 1.5rem 1rem;
+}
+
+.subject h3 {
+    padding-bottom: 1rem;
+}
+
+.subject h4,p {
+    color: rgb(145, 146, 148);
+}
+
+subject,p  {
+    padding: 0.5rem 0;
+    font-weight: 300;
+}
+
+/* Exhibit section style */
+
+.exhibit .top-title{
+    background-color: rgb(226, 229, 229);
+   
+}
+
+.exhibit .left-divide {
+    width: 60%;
+}
+
+.exhibit video {
+    width: 100%;
+}
+
+
+
+/* Footer Style */
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 1rem 4rem 1.5rem;
+    
+}
+
 
 
 
