--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,7 @@ h1 {
   font-weight: bold;
 }
 
+
 h2  {
   font-size: 2rem;
   font-weight: 400;
@@ -38,15 +39,13 @@ a {
   height: auto;
 }
 
+@media only screen and (max-width: 1024px ) {
+    h1 {font-size: 3rem;}
+}
 
 
-
-/*div {
-  border: 2px solid green;
-} */
-
-/* Nav stlyes */
-nav {
+/* Header stlyes */
+header {
   display: flex;
   width: 100%;
   height: 4rem;
@@ -66,6 +65,10 @@ nav {
     color: rgb(165, 165, 168);
 }
 
+nav {
+    height: 100%;
+}
+
 nav ul {
   display: flex;
   flex-direction: row;
@@ -81,6 +84,20 @@ nav ul li {
 nav ul li:nth-child(1n+2){
   border-left: 1rem solid rgb(125, 255, 251);
 }
+
+@media only screen and (min-width: 581px ) {
+    .icon.mobile {display: none;}
+    
+}
+
+
+@media only screen and (max-width: 580px ) {
+    
+    .company span {display: none;}
+    nav li {display: none;}
+    .company {width: 100%; display: flex; justify-content: space-between;}
+}
+
 
 /* banner */
 .banner {
@@ -126,6 +143,21 @@ nav ul li:nth-child(1n+2){
     color: white;
     margin-top: 2rem;
     margin-right: 5rem;
+}
+
+.btn a {
+    color: white; 
+}
+
+
+
+@media only screen and (max-width: 580px ) {
+    .banner {flex-direction: column;}
+    .banner .divide-left {width: 100%;}
+    .banner .divide-right {width: auto; padding-bottom: 2rem;padding-right: 1.5rem;}
+    .main-image {padding: 0 0 2rem 0;}
+    .banner .divide-right h1 {padding-bottom: 2rem;}
+    .btn {width: 100%;}
 }
 
 /* Content styles */
@@ -191,6 +223,22 @@ h1.content-title {
   font-weight: 300;    
 }
 
+@media only screen and (min-width: 581px ) {
+    .content .mobile {display: none;}
+}
+
+@media only screen and (max-width: 580px ) {
+    .content .divide-left {display: none;}
+    .content .divide-right {width: 100%; padding: 1rem;}
+    .content .article {flex-direction: column; padding-bottom: 2rem;}
+    .article-image {width: 100%;}
+    .content .article img {width: 100%; margin: auto;}
+    .content .desktop {display: none;}
+    .content .mobile {width: 100%;}
+    .content .article-text {width: 80%; margin-left: 1rem; padding-top: 2rem;}
+    .content .article:last-child {background-color: rgb(226, 229, 229);}        
+}
+
 /* Learning section style */
 
 .learning {
@@ -240,6 +288,17 @@ subject,p  {
     font-weight: 300;
 }
 
+
+@media only screen and (max-width: 580px ) {
+    .learning {background-color: rgb(230, 229, 229); padding-bottom: 2rem; border-top: 1px solid rgb(205, 206, 209);border-bottom: 1px solid rgb(205, 206, 209);}
+    .course-gallery {flex-direction: column;}
+    .course {width: auto; background-color: rgb(202, 204, 203); margin-bottom: 0.5rem;}
+    .subject {padding: 1rem 1rem 1.5rem 1rem;}
+    .subject h3 {padding-bottom: 0;}
+    .course img {display: none;}
+    .learning .subject p {display: none;}
+}
+
 /* Exhibit section style */
 
 .exhibit .top-title{
@@ -274,16 +333,28 @@ subject,p  {
     background-color: rgb(202, 204, 203);
 }
 
+@media only screen and (max-width: 580px ) {
+    .exhibit {background-color: rgb(226, 229, 229); padding-bottom: 1.5rem; }
+    .exhibit .divide-left {width: 100%; padding-left: 0; padding-right: 0;}
+    .exhibit h3 {display: none;}
+    .exhibit .divide-right {display: none;}
+    .exhibit p {display: none;}
+}
 
 /* Footer Style */
 
-.footer {
+footer {
     display: flex;
     justify-content: space-between;
     margin: 1rem 1rem 4rem 1.5rem;
     
 }
 
+@media only screen and (max-width: 580px ) {
+    footer {background-color: rgb(226, 229, 229);}
+    footer {margin: 1rem 1.5rem;}
 
+    footer h4:last-child {display: none;}
+}
 
 
